overflow-x: hidden for html property on global.css file in order to prevent our layout not snapping into its place

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -142,6 +142,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
